Update rendered index.

--- a/site/index.html
+++ b/site/index.html
@@ -67,8 +67,8 @@ development machine, I can't be bothered to clutter the codebase to support you.
 Feels bad, man.</p>
 <h2 id="installation">Installation</h2>
 <p>Use <a href="http://www.vim.org/scripts/script.php?script_id=2332">Pathogen</a> to install the plugin from your choice of repositories:</p>
-<pre><code>hg clone https://bitbucket.org/sjl/threesome.vim ~/.vim/bundle
-git clone https://github.com/sjl/threesome.vim.git ~/.vim/bundle
+<pre><code>hg clone https://bitbucket.org/sjl/threesome.vim ~/.vim/bundle/threesome
+git clone https://github.com/sjl/threesome.vim.git ~/.vim/bundle/threesome
 </code></pre>
 <p>Build the docs:</p>
 <pre><code>:call pathogen#helptags()
