Rename to Splice, and change default prefix.
--HG--
rename : autoload/threesomelib/init.py => autoload/splicelib/init.py
rename : autoload/threesomelib/modes.py => autoload/splicelib/modes.py
rename : autoload/threesomelib/settings.py => autoload/splicelib/settings.py
rename : autoload/threesomelib/util/__init__.py => autoload/splicelib/util/__init__.py
rename : autoload/threesomelib/util/bufferlib.py => autoload/splicelib/util/bufferlib.py
rename : autoload/threesomelib/util/io.py => autoload/splicelib/util/io.py
rename : autoload/threesomelib/util/keys.py => autoload/splicelib/util/keys.py
rename : autoload/threesomelib/util/windows.py => autoload/splicelib/util/windows.py

--- a/site/layout.html
+++ b/site/layout.html
@@ -6,11 +6,11 @@
 
 <head>
     <meta charset="utf-8" />
-    <base href="/threesome.vim/">
+    <base href="/splice.vim/">
 
     <title>{{ title }}</title>
 
-    <meta name="description" content="Threesome is a Vim plugin for resolving three-way merge conflicts"/>
+    <meta name="description" content="Splice is a Vim plugin for resolving three-way merge conflicts"/>
     <meta name="author" content="Steve Losh"/>
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -32,10 +32,10 @@
 <body>
     <div class="container">
         <div class="five columns sidebar">
-            <h1 class="logo"><a href="">threesome</a></h1>
+            <h1 class="logo"><a href="">splice</a></h1>
 
             <p>
-                Threesome is a Vim plugin for resolving conflicts during&nbsp;three-way&nbsp;merges.
+                Splice is a Vim plugin for resolving conflicts during&nbsp;three-way&nbsp;merges.
             </p>
 
             <p>
